--- a/css/main.css
+++ b/css/main.css
@@ -9,8 +9,7 @@
 *,
 *::before,
 *::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* Links */
@@ -63,8 +62,7 @@ input::-ms-clear {
 
 button, input[type=submit] {
   display: inline-block;
-  -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
   background-color: transparent;
   background: none;
   cursor: pointer;
@@ -89,17 +87,69 @@ legend {
 }
 
 body {
-  font-family: "Playfair Display", serif;
+  font-family: "Raleway", sans-serif;
   background-color: #242B33;
   color: #FFFFFF;
   font-size: 16px;
+  line-height: 24px;
 }
 
 a {
   color: #FFFFFF;
-  -webkit-transition: color 0.2s ease-in;
   transition: color 0.2s ease-in;
 }
 a:hover {
   color: #D4C17F;
 }
+
+.container {
+  max-width: 1140px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.h1__title {
+  color: #D4C17F;
+  text-align: center;
+  font-size: 48px;
+  font-family: "Playfair Display", serif;
+  font-weight: 700;
+  line-height: 1.2;
+}
+
+.header {
+  background: linear-gradient(180deg, #242B33 11.98%, rgba(45, 52, 60, 0.38) 51.04%, #242B33 92.19%), url("../img/header/header-bg.jpg"), lightgray 50%/cover no-repeat;
+}
+
+.header__wrapper {
+  padding-top: 30px;
+  padding-bottom: 74px;
+  min-height: 840px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.header__top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__title {
+  max-width: 556px;
+  align-self: center;
+}
+
+.header-nav {
+  font-size: 14px;
+  letter-spacing: 0.7px;
+}
+
+.nav__list {
+  display: flex;
+  justify-content: space-between;
+  column-gap: 40px;
+}/*# sourceMappingURL=main.css.map */
