--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -2,18 +2,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400;700&family=Roboto:wght@300&display=swap');
 
 
-
 body {
-    font-family: $font-main;
-    background-color: $dark;
-    color: $white;
-    font-size: 16px;
+  font-family: $font-main;
+  background-color: $dark;
+  color: $white;
+  font-size: 16px;
+  line-height: 24px;
 }
 
 a {
-    color: $white;
-    transition: color 0.2s ease-in;
-    &:hover {
-        color: $accent;
-    }
+  color: $white;
+  transition: color 0.2s ease-in;
+
+  &:hover {
+    color: $accent;
+  }
+}
+
+.container {
+  max-width: $page-width;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+// Typo
+.h1__title {
+  color: $accent;
+  text-align: center;
+  font-size: 48px;
+  font-family: $font-accent;
+  font-weight: 700;
+  line-height: 1.2;
 }
