--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,3 +2,7 @@
 @import './base/reset';
 @import './base/vars';
 @import './base/base';
+
+// Blocks
+@import './blocks/header';
+@import './blocks/header-nav';
