--- a/css/main.css
+++ b/css/main.css
@@ -141,6 +141,49 @@ a:hover {
 .header__title {
   max-width: 556px;
   align-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 81px;
+}
+
+.mouse__icon {
+  display: block;
+  width: 40px;
+  height: 40px;
+  background-image: url("../img/icons/mouse.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.header__footer {
+  display: flex;
+  justify-content: center;
+  column-gap: 100px;
+}
+
+.contacts {
+  display: inline-block;
+  display: flex;
+  align-items: center;
+}
+
+.contacts::before {
+  content: "";
+  display: inline-block;
+  width: 21px;
+  height: 21px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  margin-right: 14px;
+}
+
+.placeholder__icon::before {
+  background-image: url("../img/icons/placeholder.svg");
+}
+
+.phone__icon::before {
+  background-image: url("../img/icons/phone-call.svg");
 }
 
 .header-nav {
