--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,3 +6,6 @@
 // Blocks
 @import './blocks/header';
 @import './blocks/header-nav';
+@import './blocks/testimonials';
+@import './blocks/appartments';
+@import './blocks/appartments-card';
