--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -36,3 +36,12 @@ a {
   font-weight: 700;
   line-height: 1.2;
 }
+
+.h2__title {
+  color: $accent;
+  font-size: 36px;
+  font-family: $font-accent;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
