--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,8 @@
 @import './base/reset';
 @import './base/vars';
 @import './base/base';
+@import './base/grid';
+
 
 // Blocks
 @import './blocks/header';
