--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -7,8 +7,11 @@ $font-secondary: 'Roboto', sans-serif;
 $dark: #242B33;
 $accent: #D4C17F;
 $white: #FFFFFF;
+$form-text: #BEBEBE;
 $footer-bg: #2D343C;
 $page-width: 1140px;
+$form-input-bg: hsla(0, 0%, 100%, 0.2);
+$form-ifo-color: #E7E7E7;
 
 // nav
 $hnav-column-gap: 40px;
