--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,3 +11,7 @@
 @import './blocks/testimonials';
 @import './blocks/appartments';
 @import './blocks/appartments-card';
+@import './blocks/appartments-card';
+@import './blocks/cta';
+@import './blocks/form';
+@import './blocks/video';
