feat: add questions section

--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -6,6 +6,7 @@ $font-secondary: 'Roboto', sans-serif;
 // Colors
 $dark: #242B33;
 $accent: #D4C17F;
+$accent-hover: #948652;
 $white: #FFFFFF;
 $form-text: #BEBEBE;
 $footer-bg: #2D343C;
