--- a/css/main.css
+++ b/css/main.css
@@ -9,8 +9,7 @@
 *,
 *::before,
 *::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* Links */
@@ -63,8 +62,7 @@ input::-ms-clear {
 
 button, input[type=submit] {
   display: inline-block;
-  -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
   background-color: transparent;
   background: none;
   cursor: pointer;
@@ -98,7 +96,6 @@ body {
 
 a {
   color: #FFFFFF;
-  -webkit-transition: color 0.2s ease-in;
   transition: color 0.2s ease-in;
 }
 a:hover {
@@ -132,29 +129,25 @@ a:hover {
 }
 
 .grid-2-row {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-column-gap: 30px;
-     -moz-column-gap: 30px;
-          column-gap: 30px;
+  flex-direction: row;
+  justify-content: space-between;
+  column-gap: 30px;
+}
+
+.grid-4-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  column-gap: 35px;
 }
 
 .center-row {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 .header {
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(11.98%, #242B33), color-stop(51.04%, rgba(45, 52, 60, 0.38)), color-stop(92.19%, #242B33)), url("../img/header/header-bg.jpg"), lightgray 50%/cover no-repeat;
   background: linear-gradient(180deg, #242B33 11.98%, rgba(45, 52, 60, 0.38) 51.04%, #242B33 92.19%), url("../img/header/header-bg.jpg"), lightgray 50%/cover no-repeat;
 }
 
@@ -162,44 +155,23 @@ a:hover {
   padding-top: 30px;
   padding-bottom: 74px;
   min-height: 840px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .header__top {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .header__title {
   max-width: 556px;
-  -ms-flex-item-align: center;
-      align-self: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  align-self: center;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
   row-gap: 81px;
 }
 
@@ -213,25 +185,15 @@ a:hover {
 }
 
 .header__footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-column-gap: 100px;
-     -moz-column-gap: 100px;
-          column-gap: 100px;
+  justify-content: center;
+  column-gap: 100px;
 }
 
 .contacts {
   display: inline-block;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 .contacts::before {
@@ -258,46 +220,25 @@ a:hover {
 }
 
 .nav__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-column-gap: 40px;
-     -moz-column-gap: 40px;
-          column-gap: 40px;
+  justify-content: space-between;
+  column-gap: 40px;
 }
 .testimonials {
   padding-top: 120px;
   padding-bottom: 120px;
 }
 .testimonials__wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-column-gap: 70px;
-     -moz-column-gap: 70px;
-          column-gap: 70px;
+  align-items: center;
+  justify-content: center;
+  column-gap: 70px;
 }
 .testimonials__card {
   max-width: 200px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
   row-gap: 50px;
   text-align: center;
 }
@@ -306,13 +247,8 @@ a:hover {
   padding: 75px 0;
 }
 .appartments__wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   row-gap: 30px;
 }
 .appartments__title {
@@ -326,7 +262,6 @@ a:hover {
   overflow: hidden;
   position: relative;
   border: 3px solid transparent;
-  -webkit-transition: border 0.2s ease-in;
   transition: border 0.2s ease-in;
 }
 .appartments__card::before {
@@ -337,7 +272,6 @@ a:hover {
   left: 0;
   right: 0;
   bottom: 0;
-  background: -webkit-gradient(linear, left top, left bottom, from(#242B33), color-stop(0.01%, rgba(36, 43, 51, 0)), to(#242B33));
   background: linear-gradient(180deg, #242B33 0%, rgba(36, 43, 51, 0) 0.01%, #242B33 100%);
 }
 .appartments__card:hover {
@@ -356,8 +290,7 @@ a:hover {
 .card__img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 .card__title {
   position: absolute;
@@ -378,7 +311,6 @@ a:hover {
   overflow: hidden;
   position: relative;
   border: 3px solid transparent;
-  -webkit-transition: border 0.2s ease-in;
   transition: border 0.2s ease-in;
 }
 .appartments__card::before {
@@ -389,7 +321,6 @@ a:hover {
   left: 0;
   right: 0;
   bottom: 0;
-  background: -webkit-gradient(linear, left top, left bottom, from(#242B33), color-stop(0.01%, rgba(36, 43, 51, 0)), to(#242B33));
   background: linear-gradient(180deg, #242B33 0%, rgba(36, 43, 51, 0) 0.01%, #242B33 100%);
 }
 .appartments__card:hover {
@@ -408,8 +339,7 @@ a:hover {
 .card__img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 .card__title {
   position: absolute;
@@ -425,7 +355,6 @@ a:hover {
 
 .cta {
   padding: 180px 0 190px;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(10.42%, #242b33), color-stop(50.52%, rgba(36, 43, 51, 0)), color-stop(90.1%, #242b33)), -webkit-gradient(linear, left bottom, left top, from(rgba(36, 43, 51, 0.9)), to(rgba(36, 43, 51, 0.9))), url("../img/cta/cta_bg.jpeg");
   background: linear-gradient(180deg, #242b33 10.42%, rgba(36, 43, 51, 0) 50.52%, #242b33 90.1%), linear-gradient(0deg, rgba(36, 43, 51, 0.9) 0%, rgba(36, 43, 51, 0.9) 100%), url("../img/cta/cta_bg.jpeg");
   background-repeat: no-repeat;
   background-position: center center;
@@ -444,13 +373,8 @@ a:hover {
   line-height: 24px;
 }
 .content__form {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   row-gap: 35px;
 }
 
@@ -470,26 +394,14 @@ a:hover {
   font-style: normal;
   font-weight: 400;
   line-height: 27px;
+  border: 3px solid transparent;
+  transition: border 0.2s ease-in;
 }
-
-.form-input::-webkit-input-placeholder {
-  color: #BEBEBE;
-}
-
-.form-input::-moz-placeholder {
-  color: #BEBEBE;
-}
-
-.form-input:-ms-input-placeholder {
-  color: #BEBEBE;
-}
-
-.form-input::-ms-input-placeholder {
-  color: #BEBEBE;
-}
-
 .form-input::placeholder {
   color: #BEBEBE;
+}
+.form-input:focus {
+  border: 3px solid #D4C17F;
 }
 
 .form-btn {
@@ -504,6 +416,10 @@ a:hover {
   font-style: normal;
   font-weight: 700;
   line-height: 27px;
+  transition: background 0.2s ease-in-out;
+}
+.form-btn:hover {
+  background: #948652;
 }
 
 .form-info {
@@ -520,19 +436,14 @@ a:hover {
   padding: 0 0 90px;
 }
 .video__wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
 .video__player {
   max-width: 720px;
   width: 100%;
   height: 0;
   padding-top: 65%;
-  background: -webkit-gradient(linear, left bottom, left top, from(rgba(36, 43, 51, 0.8)), to(rgba(36, 43, 51, 0.8))), url("../../img/video-bg.jpeg");
   background: linear-gradient(0deg, rgba(36, 43, 51, 0.8) 0%, rgba(36, 43, 51, 0.8) 100%), url("../../img/video-bg.jpeg");
   background-repeat: no-repeat;
   background-position: center center;
@@ -551,12 +462,13 @@ a:hover {
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 100px 100px;
-  -webkit-transition: background-size 0.05s;
-  transition: background-size 0.05s;
+  border: 3px solid transparent;
+  transition: background-size 0.05s, border 0.2s ease-in;
 }
 
 .player__play-button:hover {
   background-size: 110px 110px;
+  border: 3px solid #D4C17F;
 }
 
 .map {
@@ -570,3 +482,15 @@ a:hover {
   background: #626262;
   height: 358px;
 }
+
+.questions {
+  padding: 90px 0;
+}
+.questions__title {
+  margin-bottom: 40px;
+}
+
+.footer {
+  padding: 60px 0 51px;
+  background: #2D343C;
+}/*# sourceMappingURL=main.css.map */
