--- a/scss/base/_grid.scss
+++ b/scss/base/_grid.scss
@@ -6,6 +6,14 @@
   column-gap: 30px;
 }
 
+.grid-4-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  column-gap: 35px;
+}
+
 .center-row {
   align-items: center;
 }
