--- a/scss/blocks/_video.scss
+++ b/scss/blocks/_video.scss
@@ -14,16 +14,14 @@
     width: 100%;
     height: 0;
     padding-top: 65%;
-    background: linear-gradient(
-        0deg,
+    background: linear-gradient(0deg,
         rgba(36, 43, 51, 0.8) 0%,
-        rgba(36, 43, 51, 0.8) 100%
-      ),
+        rgba(36, 43, 51, 0.8) 100%),
       url('../../img/video-bg.jpeg');
-      background-repeat: no-repeat;
-      background-position: center center;
-      background-size: cover;
-      position: relative;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    position: relative;
   }
 }
 
@@ -39,9 +37,11 @@
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 100px 100px;
-  transition: background-size 0.05s;
+  border: 3px solid transparent;
+  transition: background-size 0.05s, border 0.2s ease-in;
 }
 
 .player__play-button:hover {
   background-size: 110px 110px;
+  border: 3px solid $accent;
 }
