--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,3 +16,5 @@
 @import './blocks/form';
 @import './blocks/video';
 @import './blocks/map';
+@import './blocks/questions';
+@import './blocks/footer';
